makes some changes

--- a/src/main.scss
+++ b/src/main.scss
@@ -664,6 +664,7 @@ section{
   display: flex;
   align-items: center;
   width: 100%;
+  
 
   @media screen and (max-width:570px) {
     flex-direction: column;
@@ -677,6 +678,8 @@ section{
     border-width: 2px;
     border-color:#b9b9b9;
     border-style: solid;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 
     &::placeholder {
       color: #b9b9b9;
@@ -689,10 +692,11 @@ section{
  
   & select{
     width: 100%;
-    height: 79px;
+    height: 75px;
     border-width: 2px;
     border-color:#b9b9b9;
-    margin: 0 15px;
+    margin: 15px;
+    font-family: 'Montserrat', sans-serif;
     & :first-child{
       color: #b9b9b9;
     }
