--- a/src/main.scss
+++ b/src/main.scss
@@ -331,9 +331,10 @@ section{
 }
 
 .swiper-container {
-  width: 1000px;
+  width: 100%;
   height: 100%;
-  
+  overflow: hidden;
+
   & .swiper-slide{
     display: flex;
     align-items: baseline;
