--- a/src/main.scss
+++ b/src/main.scss
@@ -9,7 +9,7 @@ html{
 
 /* body * {
   outline: 1px solid lightgrey;
-} */
+}  */
 
 body{
   margin: 0;
@@ -20,6 +20,7 @@ main{
   background-image: url("./img/main.png");
   background-size: cover;
   background-position-y: 50%;
+  height: 100vh;
 
   & .gradient{
     position: absolute;
@@ -29,6 +30,9 @@ main{
   }
   & .container{
     padding: 0 15px;
+    @media screen and (max-width:570px) {
+      align-items: stretch;
+    }
   }
 }
 
@@ -172,7 +176,6 @@ main{
 
 
 .top__wrapper{
-  min-height: 100vh;
   z-index: 1;
 }
 
@@ -180,7 +183,13 @@ main{
   width: 174px;
   height: 174px;
   background-image: url("./img/Logo.png");
-  margin-top: 7vh;
+  margin-top: 20px;
+
+  @media screen and (max-width:570px) {
+    width: 20vh;
+    height: 20vh;
+    background-size: contain;
+  }
 }
 
 .top__text{
@@ -192,7 +201,7 @@ main{
     font-size: 4.5rem;
     text-transform: uppercase;
 
-    @media screen and (max-width:440px) {
+    @media screen and (max-width:570px) {
       font-size: 2.8rem;
     }
   }
@@ -253,7 +262,7 @@ main{
   padding: 60px 0;
 
   @media screen and (max-width:440px) {
-    padding: 20px 0;
+    padding: 5px 0;
     display: flex;
   }
   
